--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Acerca de</span></a></li>
         <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-rocket"></i> <span>Habilidades</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resumen</span></a></li>
-        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i><span>Portafolio</span></a></li>
+        <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i><span>Portafolio</span></a>
+        </li>
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Servicios</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contacto</span></a></li>
       </ul>
@@ -69,7 +70,8 @@
         <!--<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>-->
         <a href="https://www.instagram.com/jtech593/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
-        <a href="https://www.linkedin.com/in/josué-tomalá-30bb741b4" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/josué-tomalá-30bb741b4" class="linkedin"><i
+            class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -83,7 +85,7 @@
         <div class="section-title">
           <h2>Acerca de</h2>
           <p>Soy Josu&eacute; Tomal&aacute;, amante de la tecnolog&iacute;a y de la programaci&oacute;n, amable y
-            respetuoso; s&eacute; trabajar en equipo y con don de liderazgo adem&aacute;s de tener iniciativa por
+            respetuoso; s&eacute; trabajar en equipo y con don de liderazgo. Adem&aacute;s, tengo iniciativa para
             resolver problemas. Persona seria, responsable y acostumbrada a trabajar bajo presi&oacute;n. Autodidacta y
             con facilidad para aprender. Puedo adaptarme de manera r&aacute;pida a un ambiente de trabajo. </p>
         </div>
@@ -106,8 +108,8 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>20</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Titulo:</strong> <span>Estudiante de Ingenieria en
+                  <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>21</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Titulo:</strong> <span>Estudiante de Ingenieróa en
                       Ciencias Computacionales</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>jotopozo@espol.edu.ec</span>
                   </li>
@@ -221,7 +223,7 @@
                 </div>
               </div>
             </div>
-            
+
             <br>
 
             <h3>Frameworks</h3>
@@ -236,14 +238,6 @@
 
             <div class="progress">
               <span class="skill">Express Js <i class="val">60%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">Bootstrap <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -274,7 +268,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">MongoDB <i class="val">50%</i></span>
+              <span class="skill">MongoDB <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -349,7 +343,8 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Josu&eacute; Tomal&aacute;</h4>
-              <p><em>Joven Desarrollar con amor a la tecnolog&iacute;a desde pequeño. Habil en la resoluci&oacute;n de problemas y cono iniciativas de crecer.</em></p>
+              <p><em>Joven Desarrollar con amor a la tecnolog&iacute;a desde pequeño. Habil en la resoluci&oacute;n de
+                  problemas y cono iniciativas de crecer.</em></p>
               <ul>
                 <li>Guayaquil, Ecuador</li>
                 <li>+593 979 728 236</li>
@@ -373,7 +368,7 @@
             <h3 class="resume-title">Experiencia Profesional</h3>
             <div class="resume-item">
               <h4>Freelancer</h4>
-              <h5>Present</h5>
+              <h5>Presente</h5>
               <p><em>Guayaquil, Ecuador</em></p>
               <ul>
                 <li>Mantenimiento y Reparacion de Computadoras</li>
@@ -381,7 +376,42 @@
                 <li>Profesor de Tecnolog&iacute;a de Adultos Mayores</li>
               </ul>
             </div>
+            <div class="resume-item">
+              <h4>Ayudante de Cátedra</h4>
+              <h5>Mayo 2020 - Febrero 2021</h5>
+              <p><em>Escuela Superior Polit&eacute;cnica del Litoral</em></p>
+              <ul>
+                <li>Ayudante en la materia Fundamentos de Programaci&oacute;n</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Ayudante de Cátedra</h4>
+              <h5>Mayo 2021 - Presente</h5>
+              <p><em>Escuela Superior Polit&eacute;cnica del Litoral</em></p>
+              <ul>
+                <li>Ayudante en la materia de Desarrollo de aplicaciones Web y Móviles</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Ayudante de Investigación</h4>
+              <h5>Mayo 2021 - Presente</h5>
+              <p><em>Escuela Superior Polit&eacute;cnica del Litoral</em></p>
+              <ul>
+                <li>Desarrollo de aplicación móvil avanzada para el conteo de personas dentro de un edificio a través de
+                  .</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Ayudante de Investigación</h4>
+              <h5>Septiembre 2021 - Enero 2022</h5>
+              <p><em>Centro Internacional de Investigación sobre El Fenómeno El Niño (CIIFEN)</em></p>
+              <ul>
+                <li>Aplicación web (Flutter) y móvil (Angular) para el registro de observaciones dentro de estaciones
+                  meteorológicas.</li>
+              </ul>
+            </div>
           </div>
+
         </div>
 
       </div>
@@ -415,15 +445,15 @@
                 <h4>Biciespol</h4>
                 <p>Web App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/Foro.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Proyecto en Desarrollo de prestamo de bicicletas."><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="assets/img/portfolio/Foro.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Proyecto en Desarrollo de prestamo de bicicletas."><i class="bx bx-plus"></i></a>
+                  <a href="biciespol.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
-          
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-designs">
             <div class="portfolio-wrap">
@@ -432,9 +462,9 @@
                 <h4>Alien</h4>
                 <p>Illustraci&oacute;n</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/alien.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Illustraci&oacute;n de Alien diseñada en Adobe Illustrator."><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="assets/img/portfolio/alien.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Illustraci&oacute;n de Alien diseñada en Adobe Illustrator."><i class="bx bx-plus"></i></a>
+                  <a href="alien.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -448,30 +478,31 @@
                 <h4>CIIFEN</h4>
                 <p>Web App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/Usuarios.png" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Proyecto en desarrollo para centro de investigaci&oacute;n."><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="assets/img/portfolio/Usuarios.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Proyecto en desarrollo para centro de investigaci&oacute;n."><i class="bx bx-plus"></i></a>
+                  <a href="ciifen.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-designs">
+          <!--<div class="col-lg-4 col-md-6 portfolio-item filter-designs">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/skull.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Skull</h4>
                 <p>Illustraci&oacute;n</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/skull.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Illustraci&oacute;n de calavera diseñada en Adobe Illustrator."><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/skull.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Illustraci&oacute;n de calavera diseñada en Adobe Illustrator."><i
+                      class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
 
         </div>
 
@@ -488,8 +519,7 @@
         </div>
 
         <div class="row">
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-blue">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -504,8 +534,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
-            data-aos-delay="200">
+          <div class="col-lg-4 col-md-6  mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-orange ">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -516,12 +545,11 @@
                 <i class="bx bx-spreadsheet"></i>
               </div>
               <h4><a href="">Desarrollo Web</a></h4>
-              <p>Diseño, desarrollo y mantenimiento de paginas y aplicaciones web.</p>
+              <p>Diseño, desarrollo de aplicaciones web.</p>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
-            data-aos-delay="300">
+          <div class="col-lg-4 col-md-6  mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-pink">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -538,7 +566,8 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>
+    <!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= 
     <section id="testimonials" class="testimonials section-bg">
@@ -700,13 +729,15 @@
   <footer id="footer">
     <div class="container">
       <h3>Josu&eacute; Tomal&aacute;</h3>
-      <p>Gracias por visitar y leer mi p&aacute;gina de resumen, cont&aacute;ctame si estas interesado en que sea parte de tu empresa!.</p>
+      <p>Gracias por visitar y leer mi p&aacute;gina de resumen, cont&aacute;ctame si estas interesado en que sea parte
+        de tu empresa!.</p>
       <div class="social-links">
         <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>-->
         <!--<a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>-->
         <a href="https://www.instagram.com/jtech593/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
-        <a href="https://www.linkedin.com/in/josué-tomalá-30bb741b4" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/josué-tomalá-30bb741b4" class="linkedin"><i
+            class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
