--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
 
         <div class="section-title">
           <h2>Acerca de</h2>
-          <p>Soy Josu&eacute; Tomal&aacute;, amante de la tecnolog&iacute;a y de la programaci&oacute;n, amable y
-            respetuoso; s&eacute; trabajar en equipo y con don de liderazgo. Adem&aacute;s, tengo iniciativa para
-            resolver problemas. Persona seria, responsable y acostumbrada a trabajar bajo presi&oacute;n. Autodidacta y
-            con facilidad para aprender. Puedo adaptarme de manera r&aacute;pida a un ambiente de trabajo. </p>
+          <p>Soy Josu&eacute; Tomal&aacute;, amante de la tecnolog&iacute;a y de la programaci&oacute;n, con excelente valores éticos y morales. S&eacute; trabajar en equipo y con don de liderazgo. Adem&aacute;s, tengo iniciativa para
+            resolver problemas. Persona seria, responsable y con habilidades para manejar situaciones bajo presión. Autodidacta y
+            con facilidad de aprendizaje. Puedo adaptarme de manera r&aacute;pida a un ambiente de trabajo. </p>
         </div>
 
         <div class="row">
