--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>21</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Titulo:</strong> <span>Estudiante de Ingenieróa en
+                  <li><i class="bi bi-chevron-right"></i> <strong>Titulo:</strong> <span>Estudiante de Ingeniería en
                       Ciencias Computacionales</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>jotopozo@espol.edu.ec</span>
                   </li>
