--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="section-title">
           <h2>Acerca de</h2>
-          <p>Soy Josu&eacute; Tomal&aacute;, amante de la tecnolog&iacute;a y de la programaci&oacute;n, con excelente valores éticos y morales. S&eacute; trabajar en equipo y con don de liderazgo. Adem&aacute;s, tengo iniciativa para
+          <p>Soy Josu&eacute; Tomal&aacute;, amante de la tecnolog&iacute;a y de la programaci&oacute;n, con excelentes valores éticos y morales. S&eacute; trabajar en equipo y con don de liderazgo. Adem&aacute;s, tengo iniciativa para
             resolver problemas. Persona seria, responsable y con habilidades para manejar situaciones bajo presión. Autodidacta y
             con facilidad de aprendizaje. Puedo adaptarme de manera r&aacute;pida a un ambiente de trabajo. </p>
         </div>
@@ -96,7 +96,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Desarrollador Web</h3>
             <p class="fst-italic">
-              Estudiantes con excelentes dotes dentro del diseño y desarrollo web
+              Estudiante universitario con excelentes dotes dentro del diseño y desarrollo web
             </p>
             <div class="row">
               <div class="col-lg-6">
